--- a/Spotify notebook.ipynb
+++ b/Spotify notebook.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "5f9cc5ef",
+   "metadata": {},
+   "source": [
+    "# Importing Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 149,
    "id": "ae3db1b6",
@@ -18,13 +26,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "79fb382c",
+   "metadata": {},
+   "source": [
+    "# Conncting to the API"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 150,
    "id": "2ee7a58f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "client_credentials_manager = SpotifyClientCredentials(client_id='1bac45126b4241dcb9e91a2d05402b41', client_secret='e9519a18986d468da57732bac2b70b91')\n",
+    "client_credentials_manager = SpotifyClientCredentials(client_id='CLIENT ID', client_secret='SECRET ID')\n",
     "sp = spotipy.Spotify(client_credentials_manager = client_credentials_manager)"
    ]
   },
@@ -115,6 +131,14 @@
     "# create dataset\n",
     "df = pd.DataFrame(tracks, columns = ['name','length', 'popularity', 'danceability', 'acousticness', 'energy', 'instrumentalness', 'liveness', 'loudness', 'speechiness', 'tempo','valence', 'time_signature'])\n",
     "df.to_csv(\"spotify.csv\", sep = ',')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81d1fe21",
+   "metadata": {},
+   "source": [
+    "# Exploring the Data"
    ]
   },
   {
@@ -374,6 +398,14 @@
    "source": [
     "df.drop(\"name\", axis=1, inplace=True)\n",
     "df.drop(\"popularity\", axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecd945e3",
+   "metadata": {},
+   "source": [
+    "# Visualization"
    ]
   },
   {
@@ -693,74 +725,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 42,
    "id": "3d66c47e",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>danceability</th>\n",
-       "      <th>acousticness</th>\n",
-       "      <th>energy</th>\n",
-       "      <th>instrumentalness</th>\n",
-       "      <th>liveness</th>\n",
-       "      <th>loudness</th>\n",
-       "      <th>speechiness</th>\n",
-       "      <th>tempo</th>\n",
-       "      <th>valence</th>\n",
-       "      <th>duration_ms</th>\n",
-       "      <th>time_signature</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   danceability  acousticness  energy  instrumentalness  liveness  loudness  \\\n",
-       "0           0.0           0.0     0.0               0.0       0.0       0.0   \n",
-       "\n",
-       "   speechiness  tempo  valence  duration_ms  time_signature  \n",
-       "0          0.0    0.0      0.0          0.0             0.0  "
-      ]
-     },
-     "execution_count": 145,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "V:\\Anaconda\\lib\\site-packages\\sklearn\\preprocessing\\_data.py:461: RuntimeWarning: All-NaN slice encountered\n",
+      "  data_min = np.nanmin(X, axis=0)\n",
+      "V:\\Anaconda\\lib\\site-packages\\sklearn\\preprocessing\\_data.py:462: RuntimeWarning: All-NaN slice encountered\n",
+      "  data_max = np.nanmax(X, axis=0)\n",
+      "V:\\Anaconda\\lib\\site-packages\\sklearn\\preprocessing\\_data.py:461: RuntimeWarning: All-NaN slice encountered\n",
+      "  data_min = np.nanmin(X, axis=0)\n",
+      "V:\\Anaconda\\lib\\site-packages\\sklearn\\preprocessing\\_data.py:462: RuntimeWarning: All-NaN slice encountered\n",
+      "  data_max = np.nanmax(X, axis=0)\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'scaled_single_track_dfjm' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [42]\u001b[0m, in \u001b[0;36m<cell line: 7>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m scaled\u001b[38;5;241m=\u001b[39mscaler\u001b[38;5;241m.\u001b[39mfit_transform(single_track_df)\n\u001b[0;32m      6\u001b[0m scaled_single_track_df\u001b[38;5;241m=\u001b[39mpd\u001b[38;5;241m.\u001b[39mDataFrame(scaled, columns\u001b[38;5;241m=\u001b[39msingle_track_df\u001b[38;5;241m.\u001b[39mcolumns)\n\u001b[1;32m----> 7\u001b[0m \u001b[43mscaled_single_track_dfjm\u001b[49m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'scaled_single_track_dfjm' is not defined"
+     ]
     }
    ],
    "source": [
@@ -770,7 +762,7 @@
     "scaler.fit(single_track_df)\n",
     "scaled=scaler.fit_transform(single_track_df)\n",
     "scaled_single_track_df=pd.DataFrame(scaled, columns=single_track_df.columns)\n",
-    "scaled_single_track_df"
+    "scaled_single_track_dfjm"
    ]
   },
   {
