--- a/Spotify notebook.ipynb
+++ b/Spotify notebook.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client_credentials_manager = SpotifyClientCredentials(client_id='1bac45126b4241dcb9e91a2d05402b41', client_secret='e9519a18986d468da57732bac2b70b91')\n",
+    "client_credentials_manager = SpotifyClientCredentials(client_id='client ID', client_secret='clientSECRET')\n",
     "sp = spotipy.Spotify(client_credentials_manager = client_credentials_manager)"
    ]
   },
@@ -2666,7 +2666,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "765b6641",
+   "id": "933dc482",
    "metadata": {},
    "outputs": [
     {
@@ -2701,7 +2701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c73d0f5",
+   "id": "6285336f",
    "metadata": {},
    "source": [
     "Liveness, popularity, acousticness and length seem to be the highest drivers for numerical_top_50"
@@ -2709,7 +2709,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d37964ff",
+   "id": "1c164eb4",
    "metadata": {},
    "source": [
     "<b>Plotting liveness over categorical_top_50<b>"
@@ -2718,7 +2718,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "3511dce2",
+   "id": "3ac41993",
    "metadata": {},
    "outputs": [
     {
@@ -2762,7 +2762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d534be80",
+   "id": "6cff67f8",
    "metadata": {},
    "source": [
     "<b> Plotting popularity over categorical_top_50<b>"
@@ -2771,7 +2771,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "73466b79",
+   "id": "78876150",
    "metadata": {},
    "outputs": [
     {
@@ -2812,7 +2812,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "178e14ad",
+   "id": "dbcd5b6b",
    "metadata": {},
    "source": [
     "<b> plotting acousticness over categorical_top_50<b>"
@@ -2821,7 +2821,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "83d1eb2e",
+   "id": "f6d687c7",
    "metadata": {},
    "outputs": [
     {
@@ -2859,7 +2859,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "351dbc8a",
+   "id": "8365892e",
    "metadata": {},
    "source": [
     "<b>Plotting length over categorical_top_50<b>"
@@ -2868,7 +2868,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "1753c0a3",
+   "id": "cbc25e36",
    "metadata": {},
    "outputs": [
     {
@@ -2907,7 +2907,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "b774aa2d",
+   "id": "cc916374",
    "metadata": {},
    "outputs": [
     {
@@ -2945,7 +2945,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82f9d86d",
+   "id": "5ca5c73b",
    "metadata": {},
    "source": [
     "Features like liveness, popularity, acousticness, length and danceability seem to have values around the same area so there's a pattern."
@@ -2954,7 +2954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb1d5eaf",
+   "id": "829b0061",
    "metadata": {},
    "outputs": [],
    "source": [
