--- a/Spotify notebook.ipynb
+++ b/Spotify notebook.ipynb
@@ -4180,7 +4180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "981aa992",
+   "id": "e9781873",
    "metadata": {},
    "source": [
     "# Splitting and Modelling"
@@ -4206,7 +4206,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "e1059862",
+   "id": "fd8a1ee6",
    "metadata": {},
    "outputs": [
     {
@@ -4247,14 +4247,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "908953c5",
+   "metadata": {},
+   "source": [
+    "This is probably a case of overfitting due to a small dataset. Will update the dataset soon"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4d47262",
+   "id": "8d6a4284",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "This is probably a case of overfitting due to a small dataset "
-   ]
+   "source": []
   }
  ],
  "metadata": {
